--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/uuid": "^9.0.1",
+    "classnames": "^2.3.2",
     "firebase": "^9.19.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
